1.2.0
- Add goat
- Add goat cheese
- Add goat milk
- Add wolf head (includes coyote)
- Add deer head
- Fix server crash with loading and unloading Trillium on servers
- Fix error in configuration where Hirschgeist spawn weight was named "weight"

1.1.4
- New Languages:
    Arabic (by MicroDroid)
    German (by ekrempel)
    Esperanto (by its_meow)
    English (by its_meow)
    Spanish (by its_meow and ikerleon02)
    French (by slabruyere)
    Japanese (by B_Wither)
    Portuguese (by alexaldr)
    Russian (by kellixon)
    Chinese (Traditional) (by han880805)
    Chinese (Simplified) (by han880805)



1.1.3
- Fixed fatal server crash
- Added config options to disable spawning of mobs/generation of trillium

1.1.2
- Reorganized internal codebase
- Fixed bug where some users would experience overspawning
- Updated to new entity registry system (the fix for spawning)
- Added configurable spawning weights (in mod config)
- Update mcmod.info to include proper update/project/site links and fix typo

1.1.1
- Added antler drop for deer (My bad)

1.1.0
- Added venisons to OreDictionary (listAllmeatraw and listAllmeatcooked)
- Fix hirschgeist bones sometimes moving out of the ghost part
- Added sound for hirschgeist and footstep sounds
- Added Russian Translation (Thank you to kellixon!)
- Fix invalid domain errors (May reset model of trillium and burning status of hand of fate)
- Added particle system (not used)
- Removed misc unused code (reduce filesize, cleanup)
- Added lammergeier landing to make taming easier
- Made some hostile mobs spawn in peaceful but are unable to attack
- Added rotation to trillium (rotate different placement directions like a chest)
- Fix bug where mobs that check for daytime (hirschgeist, coyote) would not always register daytime/nighttime
- Fix hirschgeist spawning in groups of more than one
- Add logo to mcmod.info
- Lammergeier now puts its head down while sitting (midair)
- Buffed feral wolf health (now more than normal wolves)