@@ -1,0 +1,64 @@
+package its_meow.betteranimalsplus.common.item;
+
+import its_meow.betteranimalsplus.common.tileentity.TileEntityHead;
+import net.minecraft.block.Block;
+import net.minecraft.block.BlockSkull;
+import net.minecraft.block.state.IBlockState;
+import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.item.ItemStack;
+import net.minecraft.tileentity.TileEntity;
+import net.minecraft.util.EnumActionResult;
+import net.minecraft.util.EnumFacing;
+import net.minecraft.util.EnumHand;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
+import net.minecraft.world.World;
+
+public class ItemWolfHead extends ItemBlockSkull {
+
+	//Is non static!
+	private Block block;
+
+	public ItemWolfHead(Block block) {
+		super(block);
+		setMaxDamage(0);
+		this.setUnlocalizedName("wolfhead");
+		this.block = block;
+	}
+
+	@Override
+	public EnumActionResult onItemUse(EntityPlayer player, World world, BlockPos pos, EnumHand hand,
+			EnumFacing side, float hitX, float hitY, float hitZ) {
+		ItemStack stack = player.getHeldItem(hand);
+		if (side == EnumFacing.DOWN || side == EnumFacing.UP) {
+			return EnumActionResult.FAIL;
+		} else {
+			BlockPos clickedPos = pos.offset(side);
+			IBlockState clickedState = world.getBlockState(clickedPos);
+			if(!clickedState.getBlock().isReplaceable(world, clickedPos)) {
+				return EnumActionResult.FAIL;
+			}
+			if (!world.isRemote) {
+				world.setBlockState(clickedPos, block.getDefaultState().withProperty(BlockSkull.FACING, side), 3);
+
+				TileEntity tile = world.getTileEntity(clickedPos);
+				populateTile(stack, side, player, tile);
+			}
+			if(!player.capabilities.isCreativeMode) {
+				stack.shrink(1);
+			}
+			return EnumActionResult.SUCCESS;
+		}
+	}
+
+	protected void populateTile(ItemStack stack, EnumFacing side, EntityPlayer player, TileEntity tile) {
+		if (tile instanceof TileEntityHead) {
+			TileEntityHead tileSkull = (TileEntityHead) tile;
+			int rotation = 0;
+			if (side == EnumFacing.UP)
+				rotation = MathHelper.floor(player.rotationYaw * 16.0F / 360.0F + 0.5D) & 15;
+			tileSkull.setSkullRotation(rotation);
+		}
+	}
+
+}
