@@ -5,43 +5,40 @@ import java.util.Set;
 
 import com.google.common.base.Preconditions;
 
-import its_meow.betteranimalsplus.Ref;
 import its_meow.betteranimalsplus.common.block.BlockDeerHead;
 import its_meow.betteranimalsplus.common.block.BlockHandOfFate;
 import its_meow.betteranimalsplus.common.block.BlockHirschgeistSkull;
 import its_meow.betteranimalsplus.common.block.BlockTrillium;
+import its_meow.betteranimalsplus.common.block.BlockWolfHead;
+import its_meow.betteranimalsplus.common.tileentity.TileEntityDeerHead;
 import its_meow.betteranimalsplus.common.tileentity.TileEntityHandOfFate;
-import its_meow.betteranimalsplus.common.tileentity.TileEntityHead;
+import its_meow.betteranimalsplus.common.tileentity.TileEntityHirschgeistSkull;
 import its_meow.betteranimalsplus.common.tileentity.TileEntityTrillium;
+import its_meow.betteranimalsplus.common.tileentity.TileEntityWolfHead;
 import net.minecraft.block.Block;
-import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.ItemModelMesher;
 import net.minecraft.client.renderer.block.model.ModelResourceLocation;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemBlock;
 import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.client.event.ModelRegistryEvent;
 import net.minecraftforge.client.model.ModelLoader;
-import net.minecraftforge.client.model.obj.OBJLoader;
 import net.minecraftforge.event.RegistryEvent;
-import net.minecraftforge.fml.client.registry.ClientRegistry;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.common.eventhandler.SubscribeEvent;
 import net.minecraftforge.fml.common.registry.GameRegistry;
 import net.minecraftforge.fml.common.registry.GameRegistry.ObjectHolder;
-import net.minecraftforge.fml.relauncher.Side;
-import net.minecraftforge.fml.relauncher.SideOnly;
 import net.minecraftforge.registries.IForgeRegistry;
 
 @ObjectHolder(its_meow.betteranimalsplus.Ref.MOD_ID)
 public class BlockRegistry {
-	
+
 	public static final BlockTrillium trillium = new BlockTrillium();
 	public static final BlockHirschgeistSkull hirschgeistskull = new BlockHirschgeistSkull();
 	public static final BlockHandOfFate handoffate = new BlockHandOfFate();
-	
+
 	public static final BlockDeerHead deerhead = new BlockDeerHead();
-	
+	public static final BlockWolfHead wolfhead = new BlockWolfHead();
+
 	@Mod.EventBusSubscriber
 	public static class RegistrationHandler {
 		public static final Set<ItemBlock> ITEM_BLOCKS = new HashSet<>();
@@ -60,13 +57,16 @@ public class BlockRegistry {
 					hirschgeistskull,
 					handoffate,
 					deerhead,
+					wolfhead,
 			};
 
 			registry.registerAll(blocks);
 
 			GameRegistry.registerTileEntity(TileEntityTrillium.class, new ResourceLocation(trillium.getRegistryName() +  "tileentity"));
-			GameRegistry.registerTileEntity(TileEntityHead.class, new ResourceLocation(hirschgeistskull.getRegistryName() +  "tileentity"));
+			GameRegistry.registerTileEntity(TileEntityHirschgeistSkull.class, new ResourceLocation(hirschgeistskull.getRegistryName() +  "tileentity"));
+			GameRegistry.registerTileEntity(TileEntityDeerHead.class, new ResourceLocation(deerhead.getRegistryName() + "tileentity"));
 			GameRegistry.registerTileEntity(TileEntityHandOfFate.class,  new ResourceLocation(handoffate.getRegistryName() +  "tileentity"));
+			GameRegistry.registerTileEntity(TileEntityWolfHead.class, new ResourceLocation(wolfhead.getRegistryName() + "tileentity"));
 		}
 
 
@@ -82,6 +82,7 @@ public class BlockRegistry {
 					hirschgeistskull.getItemBlock(),
 					handoffate.getItemBlock(),
 					deerhead.getItemBlock(),
+					wolfhead.getItemBlock(),
 			};
 
 			final IForgeRegistry<Item> registry = event.getRegistry();
@@ -93,7 +94,7 @@ public class BlockRegistry {
 				ITEM_BLOCKS.add(item);
 			}
 		}
-		
+
 		@SubscribeEvent
 		public static void registerItemBlockModels(final ModelRegistryEvent event) {
 			//OBJLoader.INSTANCE.addDomain(Ref.MOD_ID);
@@ -101,16 +102,17 @@ public class BlockRegistry {
 			initModel(hirschgeistskull, 0);
 			initModel(handoffate, 0);
 			initModel(deerhead, 0);
+			initModel(wolfhead, 0);
 		}
-		
-		
-	    public static void initModel(Block block, int meta) {
-	        ModelLoader.setCustomModelResourceLocation(Item.getItemFromBlock(block), meta, new ModelResourceLocation(block.getRegistryName(), "inventory"));
-	    }
-	    
-	    public static void initModelOBJ(Block block, int meta) {
-	        ModelLoader.setCustomModelResourceLocation(Item.getItemFromBlock(block), meta, new ModelResourceLocation(block.getRegistryName() + ".obj", "inventory"));
-	    }
-	    
+
+
+		public static void initModel(Block block, int meta) {
+			ModelLoader.setCustomModelResourceLocation(Item.getItemFromBlock(block), meta, new ModelResourceLocation(block.getRegistryName(), "inventory"));
+		}
+
+		public static void initModelOBJ(Block block, int meta) {
+			ModelLoader.setCustomModelResourceLocation(Item.getItemFromBlock(block), meta, new ModelResourceLocation(block.getRegistryName() + ".obj", "inventory"));
+		}
+
 	}
 }
